# editaplot

./: .gitattributes  .gitignore  ASSET_PROVENANCE.md  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  PRIVACY.md  README.en.md  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  editaplot.cmd  pyproject.toml  requirements-runtime.txt
runtime/: NOTICE  pyproject.toml  requirements-runtime.txt  runtime-manifest.json
runtime/src/origin_sciplot/: __init__.py  __main__.py  app.py  data_loader.py  logging_utils.py  main_window.py  output_manager.py  palette_catalog.py  project_paths.py  reference_adaptation.py  reference_figure.py  reference_style.py  scientific_preview.py  scientific_visual.py  scientific_workflow.py  semantic_analysis.py  semantic_contract.py  template_registry.py  template_service.py  xps_adaptive.py  xps_preview.py  xps_workflow.py  xrd_semantics.py
runtime/templates/bar/: data_contract.md  data_template.csv  example_multi_group.csv  example_standard.csv  manifest.yaml  runner.py  schema.json  service.py  visual_contract.md
runtime/templates/bland_altman/: data_contract.md  data_template.csv  manifest.yaml  runner.py  schema.json  service.py  visual_contract.md
runtime/templates/bubble/: data_contract.md  data_template.csv  example_standard.csv  manifest.yaml  runner.py  schema.json  service.py  visual_contract.md
runtime/templates/calibration_curve/: data_contract.md  data_template.csv  manifest.yaml  runner.py  schema.json  service.py  visual_contract.md
runtime/templates/confusion_matrix/: data_contract.md  data_template.csv  runner.py  (+4 more)
(+374 files in other folders)
